--- a/src/app/pages/tabs/tabs.component.html
+++ b/src/app/pages/tabs/tabs.component.html
@@ -1,7 +1,5 @@
-<!-- <GridLayout> -->
-
-<TabView class="tab-view ico" androidTabsPosition="bottom">
-    <StackLayout *tabItem="{title: '&#xe900;'}">
+<TabView class="tab-view ico" androidTabsPosition="bottom" tabTextFontSize="25">
+    <StackLayout *tabItem="{title: '&#xe901;'}">
         <page-router-outlet name="productosTab"></page-router-outlet>
     </StackLayout>
 
@@ -14,7 +12,3 @@
     </StackLayout>
 
 </TabView>
-<!-- 
-    <ActivityIndicator class="activity-indicator" [busy]="isLoading" [visibility]="isLoading ? 'visible' : 'collapse'" row="1" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
-
-</GridLayout> -->
