--- a/src/app/login/signup.component.html
+++ b/src/app/login/signup.component.html
@@ -4,12 +4,12 @@
         <Image class="logo" src="~/assets/images/logo.png"></Image>
         <Label class="header" text="Digital Ads"></Label>
         <StackLayout [formGroup]="registroForm">
-            <ScrollView height="250" class="m-b-15">
+            <ScrollView height="250">
                 <GridLayout rows="auto auto auto auto,auto">
 
                     <StackLayout row="0" class="input-field">
-
-                        <TextField class="input" hint="{{iconNombre}}  Nombre y Apellido" autocorrect="false" formControlName="nombre"></TextField>
+                        <Label text="{{iconNombre}}  Nombre y Apellido" class="label-signup font-weight-bold m-b-5"></Label>
+                        <TextField class="input" autocorrect="false" formControlName="nombre"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
                         <Label text="Es necesario el nombre" class="text-danger h6" *ngIf="registroForm.controls['nombre'].errors?.required"></Label>
                         <Label text="Por lo menos tres caracteres" class="text-danger h6" *ngIf="registroForm.controls['nombre'].errors?.minlength"></Label>
@@ -17,8 +17,8 @@
                     </StackLayout>
 
                     <StackLayout row="1" class="input-field">
-
-                        <TextField class="input" hint="{{iconEmail}}  Correo Electrónico" max="10" keyboardType="email" autocorrect="false" autocapitalizationType="none" formControlName="email"></TextField>
+                        <Label text="{{iconEmail}}  Correo Electrónico" class="label-signup font-weight-bold m-b-5"></Label>
+                        <TextField class="input" max="10" keyboardType="email" autocorrect="false" autocapitalizationType="none" formControlName="email"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
                         <Label text="Es necesario el email" class="text-danger h6" *ngIf="registroForm.controls['email'].errors?.required"></Label>
                         <Label text="No es un email válido" class="text-danger h6" *ngIf="registroForm.controls['email'].errors?.email"></Label>
@@ -26,8 +26,8 @@
                     </StackLayout>
 
                     <StackLayout row="2" class="input-field">
-
-                        <TextField class="input" maxLength="10" hint="{{iconTelefono}}  Número telefónico" keyboardType="number" formControlName="telefono"></TextField>
+                        <Label text="{{iconTelefono}}  Número telefónico" class="label-signup font-weight-bold m-b-5"></Label>
+                        <TextField class="input" maxLength="10" keyboardType="number" formControlName="telefono"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
                         <Label text="Es necesario el telefono" class="text-danger h6" *ngIf="registroForm.controls['telefono'].errors?.required"></Label>
                         <Label text="No es un número valido" class="text-danger h6" *ngIf="registroForm.controls['telefono'].errors?.minlength || registroForm.controls['telefono'].errors?.maxlength"></Label>
@@ -35,8 +35,8 @@
                     </StackLayout>
 
                     <StackLayout row="3" class="input-field">
-
-                        <TextField class="input" hint="{{iconPassword}}  Contraseña" secure="true" formControlName="password"></TextField>
+                        <Label text="{{iconPassword}}  Contraseña" class="label-signup font-weight-bold m-b-5"></Label>
+                        <TextField class="input" secure="true" formControlName="password"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
                         <Label text="Es necesario la contraseña" class="text-danger h6" *ngIf="registroForm.controls['password'].errors?.required"></Label>
                         <Label text="Por lo menos 6 caracteres" class="text-danger h6" *ngIf="registroForm.controls['password'].errors?.minlength"></Label>
@@ -44,7 +44,8 @@
                     </StackLayout>
 
                     <StackLayout row="4" class="input-field">
-                        <TextField class="input" hint="{{iconPassword}}  Confirmar Contraseña" secure="true" formControlName="password2"></TextField>
+                        <Label text="{{iconPassword}}  Confirmar Contraseña" class="label-signup font-weight-bold m-b-5"></Label>
+                        <TextField class="input" secure="true" formControlName="password2"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
                         <Label text="Es necesario confirmar contraseña" class="text-danger h6" *ngIf="registroForm.controls['password2'].errors?.required"></Label>
                         <Label text="Las contraseñas no coinciden" class="text-danger h6" *ngIf="registroForm.errors?.sonIguales && !registroForm.pristine"></Label>
@@ -54,7 +55,7 @@
                 </GridLayout>
             </ScrollView>
 
-            <Button [visibility]="registroForm.valid ? 'visible' : 'collapse'" text="Registrar &#xe909;" class=" ico btn btn-primary btn-active" (tap)="signup()"></Button>
+            <Button [visibility]="registroForm.valid ? 'visible' : 'collapse'" text="Registrar &#xe909;" class="ico btn btn-primary btn-active" (tap)="signup()"></Button>
             <Button text="Regresar &#xe907;" textwrap="true" (tap)="regresarLogin()" class="p-15 ico btn-outline btn-rounded-lg btn-active"></Button>
 
         </StackLayout>
