--- a/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.css
+++ b/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.css
@@ -1,1 +1,98 @@
 /* Add mobile styles for the component here.  */
+
+.imageList {
+    margin-bottom: 15;
+    height: 36;
+    width: 36;
+}
+
+.main-container {
+    background-color: #ffffff;
+}
+
+.order-taker {
+    font-size: 18;
+    color: #0e3746;
+    font-weight: bold;
+    ;
+}
+
+.order-details {
+    vertical-align: top;
+}
+
+.items,
+.sub-total {
+    opacity: 0.8;
+    font-size: 16;
+    color: #4A535D;
+    letter-spacing: 0.027;
+    font-weight: normal;
+}
+
+.item-name {
+    font-weight: 500;
+    color: #4A535D;
+}
+
+.item-price {
+    font-weight: 400;
+}
+
+.item-quantity {
+    font-weight: 600;
+    color: #A4A9AE;
+}
+
+.btn-container {
+    height: 60;
+    vertical-align: center;
+    background-color: #ef424c;
+    border-radius: 6;
+}
+
+.sub-total Label {
+    font-weight: bold;
+}
+
+Button {
+    height: 60;
+    border-radius: 6;
+    color: #FFFFFF;
+    font-size: 16;
+    font-weight: bold;
+    letter-spacing: 0.05;
+}
+
+.grand-total-container {
+    opacity: 0.8;
+    font-weight: bold;
+    font-size: 18;
+    color: #4A535D;
+    letter-spacing: 0.03;
+    margin-right: 30;
+    margin-left: 60;
+}
+
+.date-container {
+    opacity: 0.8;
+    font-weight: bold;
+    font-size: 18;
+    color: #4A535D;
+    letter-spacing: 0.03;
+    margin-right: 30;
+    margin-left: 30;
+}
+
+.divider {
+    height: 5;
+    opacity: 0.5;
+    background: #D8D8D8;
+}
+
+.iconBorrar {
+    font-size: 18;
+    margin-top: 2;
+    text-align: center;
+    color: rgb(247, 77, 77);
+}
