--- a/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
+++ b/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
@@ -61,7 +61,7 @@
             <Label row="1" col="1" text="$ {{orden.total  | number:'.2-2'}} "></Label>
         </GridLayout>
         <GridLayout class="m-x-15 m-y-10  btn-container" row="1">
-            <Button text="Eliminar Pedido" class="add-order" (tap)="borrarOrden(orden._id)"></Button>
+            <Button text="Eliminar Pedido" class="add-order btn btn-active" (tap)="borrarOrden(orden._id)"></Button>
         </GridLayout>
     </GridLayout>
 
