--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,8 +31,8 @@
 
         <Image src="~/assets/images/logo.png"></Image>
 
-        <TextField hint="{{iconEmail}} Correo Electronico" keyboardType="email" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded"></TextField>
-        <TextField hint="{{iconPassword}} Contraseña" secure="true" [(ngModel)]="password" class="input input-rounded"></TextField>
+        <TextField hint="{{iconEmail}} Correo Electronico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded" required></TextField>
+        <TextField hint="{{iconPassword}} Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" class="input input-rounded" required></TextField>
 
         <Button text="Ingresar a tu Cuenta &#xea13; " class="btn-primary btn-active ico" (tap)="ingresar()"></Button>
         <StackLayout orientation="horizontal">
