--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -30,6 +30,7 @@
         padding: 10;
         background-color: #F8F0EE;
         border-radius: 7;
+        vertical-align: center;
     }
     
     .labe-title {
@@ -52,16 +53,27 @@
     
     .input-cantidad {
         font-size: 24;
-        placeholder-color: #A8A8A8;
+        margin: 5 5 5 5;
+        text-align: center;
     }
     
-    .btn-cantidad {
-        width: 40;
+    .icon-cantidad {
+        font-size: 12;
+        color: #F8F0EE;
+        border-radius: 80%;
+        background-color: #ef424c;
+        width: 50;
+        height: 50;
+        text-align: center;
+        vertical-align: center;
     }
     
     .inputVariables {
         font-size: 12;
         placeholder-color: #A8A8A8;
+        vertical-align: center;
+        padding-top: 5;
+        size: 30;
     }
     
     .searchbar {
@@ -78,13 +90,23 @@
         color: #28bfdb;
     }
     
+    .icon-carrito {
+        border-bottom-right-radius: 10;
+        border-bottom-left-radius: 10;
+        border-top-right-radius: 10;
+        font-size: 24;
+        background-color: #0e3743;
+        color: #F8F0EE;
+    }
+    
     RadListView {
         margin-right: -2;
     }
     
-    .to-up {
+    .footer {
+        margin-bottom: 5;
+        margin-top: 5;
         text-align: center;
         color: #0e3743;
-        background-color: #e4ecee;
-        width: 100;
+        font-size: 18;
     }
