--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -13,7 +13,7 @@
 
     <RadListView row="0" class="card" [items]="ordenes">
 
-        <ListViewLinearLayout tkListViewLayout itemDeleteAnimation="Slide"></ListViewLinearLayout>
+        <ListViewLinearLayout tkListViewLayout itemDeleteAnimation="Fade"></ListViewLinearLayout>
 
         <ng-template let-orden="item" let-i="index">
 
