--- a/src/app.css
+++ b/src/app.css
@@ -164,3 +164,12 @@ THEME BUILDER
 .icon-5x {
     font-size: 100px;
 }
+
+.invalid {
+    color: #ef424c;
+    border-bottom-color: #ef424c;
+}
+
+.ng-valid.ng-touched {
+    border-bottom-color: #ef424c;
+}
