--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -28,9 +28,9 @@
 
 <GridLayout rows="auto,*,auto" *ngIf="productos.length != 0">
 
-    <RadListView #myRadListView row="1" class="page p-t-5" [items]="productos | filtro:textoBuscar" selectionBehavior="Press" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
+    <RadListView #myRadListView row="1" class="page p-t-5" [items]="productos | filtro:textoBuscar" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
 
-        <ng-template let-producto="item">
+        <ng-template tkListItemTemplate let-producto="item">
             <StackLayout [nsRouterLink]="['/producto', producto._id]" pageTransition="slide">
                 <!-- <StackLayout (tap)="onProductoTap(producto._id)"> -->
 
